--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~47.0.12",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
+    "geolib": "^3.3.3",
     "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-native": "0.70.5",
