--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "expo": "~47.0.12",
+    "expo-file-system": "~15.1.1",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
     "geolib": "^3.3.3",
