--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-uuid": "^2.0.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
