--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-file-system": "~15.1.1",
     "expo-location": "~15.0.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
     "geolib": "^3.3.3",
     "native-base": "^3.4.25",
     "react": "18.1.0",
